add multiselect mode to select

--- a/packages/web-components/fast-components/src/select/fixtures/base.html
+++ b/packages/web-components/fast-components/src/select/fixtures/base.html
@@ -28,6 +28,43 @@
     <fast-option value="xl">Extra Large</fast-option>
 </fast-select>
 
+<h2>Select with size attribute</h2>
+<fast-select id="select-with-size-1" size="1">
+    <fast-option>option 1</fast-option>
+    <fast-option>option 2</fast-option>
+    <fast-option>option 3</fast-option>
+    <fast-option>option 4</fast-option>
+    <fast-option>option 5</fast-option>
+</fast-select>
+<fast-select id="select-with-size-2" size="2">
+    <fast-option>option 1</fast-option>
+    <fast-option>option 2</fast-option>
+    <fast-option>option 3</fast-option>
+    <fast-option>option 4</fast-option>
+    <fast-option>option 5</fast-option>
+</fast-select>
+<fast-select id="select-with-size-3" size="3">
+    <fast-option>option 1</fast-option>
+    <fast-option>option 2</fast-option>
+    <fast-option>option 3</fast-option>
+    <fast-option>option 4</fast-option>
+    <fast-option>option 5</fast-option>
+</fast-select>
+<fast-select id="select-with-size-4" size="4">
+    <fast-option>option 1</fast-option>
+    <fast-option>option 2</fast-option>
+    <fast-option>option 3</fast-option>
+    <fast-option>option 4</fast-option>
+    <fast-option>option 5</fast-option>
+</fast-select>
+<fast-select id="select-with-size-5" size="5">
+    <fast-option>option 1</fast-option>
+    <fast-option>option 2</fast-option>
+    <fast-option>option 3</fast-option>
+    <fast-option>option 4</fast-option>
+    <fast-option>option 5</fast-option>
+</fast-select>
+
 <h2>Select with adjacent label</h2>
 <label for="select-with-adjacent-label">Adjacent Label:</label>
 <fast-select id="select-with-adjacent-label">
@@ -48,7 +85,7 @@
     </fast-select>
 </label>
 
-<h2>Disabled select</h2>
+<h2>Disabled Select</h2>
 <fast-select id="select-disabled" disabled>
     <fast-option>This option is not selectable</fast-option>
 </fast-select>
